[gd_scene load_steps=2 format=2]

[ext_resource path="res://Scripts/ZombieSpawner.gd" type="Script" id=1]

[node name="ZombieSpawner" type="Node2D"]
script = ExtResource( 1 )

[node name="Wave1Timer" type="Timer" parent="."]
wait_time = 1.5
autostart = true

[node name="Wave2Timer" type="Timer" parent="."]
wait_time = 12.0
autostart = true

[node name="Wave3Timer" type="Timer" parent="."]
wait_time = 25.0
autostart = true

[connection signal="timeout" from="Wave1Timer" to="." method="_on_Wave1Timer_timeout"]
[connection signal="timeout" from="Wave2Timer" to="." method="_on_Wave2Timer_timeout"]
[connection signal="timeout" from="Wave3Timer" to="." method="_on_Wave3Timer_timeout"]
